2004-07-01  Matthias Wimmer  <m@tthias.net>

    * jabberd/log.c: Fix for broken log messages of type 'record'. Bug could
    	be used for DoS, but existed only in CVS since 2004-05-14.

2004-06-30  Matthias Wimmer  <m@tthias.net>

    * dnsrv/srv_resolv.c: allow multiple results for a DNS query

2004-06-29  Matthias Wimmer  <m@tthias.net>

    * configure.in: flag modules as such
    * dialback/Makefile.am: same
    * dnsrv/Makefile.am: same
    * jabberd/Makefile.am: same
    * jabberd/base/Makefile.am: same
    * jabberd/lib/Makefile.am: same
    * jsm/Makefile.am: same
    * jsm/modules/Makefile.am: same
    * pthsock/Makefile.am: same
    * xdb_file/Makefile.am: same
    * jabberd/base/base_connect.c: fixed debugging statement
    * jabberd/mio_ssl.c: fixed include for openssl/err.h
    * jabberd/config.c: Do not access the global variable cmd__line in
	config.c, removed unused function config_reload() - functionallity
	is also implemented in _jabberd_restart()
    * jabberd/jabberd.c: same
    * jabberd/base/base_accept.c: removed unused external declaration
    * jsm/modules/mod_version.c: Disabled update checking on update.jabber.org
    	added documentation
    * xdb_file/Makefile.am: build xdbfiletool as well
    * xdb_file/jabberdxdbfile.h: headers for useful functions in xdb_file.c
    * xdb_file/xdb_file.c: include the header
    * xdb_file/xdbfiletool.c: small utility to get the paths inside a spool
    	directory and to convert spools manually

2004-06-27  Matthias Wimmer  <m@tthias.net>

    * UPGRADE: Information how to upgrade from the latest release
    * jabberd/lib/jabberdlib.h: moved service discovery namespaces
	declarations from mod_disco.c to this file
    * jabberd/lib/jutil.c: added documentation
    * jsm/modules/mod_admin.c: valid browse requests have to be of type 'get'
	valid jabber:iq:admin/who requests have to be of type 'get'
	removed unused code mod_admin_monitor and mod_admin_user.
	Added documentation.